--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@remixicon/react": "^4.7.0",
+    "axios": "^1.13.2",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1"
